--- a/client/src/components/List.module.scss
+++ b/client/src/components/List.module.scss
@@ -19,13 +19,14 @@
       color: #fde24f;
       font-size: 4rem;
       line-height: 4rem;
-      max-width: 9ch;
+      width: 9ch;
       margin: 0;
       font-weight: 500;
     }
 
     &__theme {
       font-size: 2.5rem;
+      text-align: center;
       color: #00214d;
       text-transform: uppercase;
       margin: 2rem 0 0 0;
@@ -61,6 +62,7 @@
   &__content {
     width: 50%;
     min-width: 414px;
+    min-height: calc(70vh - 5rem);
     max-height: calc(100vh - 10rem);
     height: fit-content;
     background-color: white;
