--- a/client/src/components/Product.module.scss
+++ b/client/src/components/Product.module.scss
@@ -4,7 +4,7 @@
   &__header {
     height: 2rem;
 
-    label {
+    .label {
       height: 2rem;
       display: flex;
       justify-content: space-between;
